--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "hot-reload",
     "time-travel"
   ],
-  "author": "",
+  "author": "asger nielsen <opvasger@gmail.com>",
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/opvasger/elm-develop/issues"
