Revert "package info"
This reverts commit e3b6a7863a652b2ea19afa8b0b0ae850697fea67.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "hot-reload",
     "time-travel"
   ],
-  "author": "asger nielsen <opvasger@gmail.com>",
+  "author": "",
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/opvasger/elm-develop/issues"
